# Escola-saas

./: .gitignore  package-lock.json  package.json  supabaseClient.js  vercel.json
sme-saas/: .env  .env.example  README.md  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
sme-saas/.github/workflows/: ci.yml
sme-saas/apps/reporting/: Dockerfile  pyproject.toml
sme-saas/apps/reporting/src/: main.py
sme-saas/apps/rt/: go.mod  main.go
sme-saas/apps/web/: .env.local  middleware.ts  package.json  tailwind.config.js  tsconfig.json
sme-saas/apps/web/.next/: trace
sme-saas/apps/web/.next/server/: edge-runtime-webpack.js  middleware.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
sme-saas/apps/web/app/: layout.tsx  page.tsx  providers.tsx
sme-saas/apps/web/lib/: auth.ts  rbac.ts  realtime.ts  supabase.ts
sme-saas/apps/web/public/: manifest.json  offline.html  sw.js
sme-saas/apps/web/styles/: globals.css
sme-saas/apps/web/tests/: pwa.test.ts  rbac.test.ts  version.test.ts
sme-saas/e2e/: auth.spec.ts  smoke.spec.ts
sme-saas/scripts/: build-web.cjs  seed-apply.cjs
sme-saas/supabase/: SETUP_INSTRUCTIONS.md  complete_schema.sql  create_demo_users.sql  rls_policies.sql
sme-saas/supabase/migrations/: 001_init_schema.sql  002_full_schema.sql  003_rls_policies.sql  004_more_rls.sql  005_auditoria_triggers.sql  006_extend_auditoria.sql  007_user_sync.sql
sme-saas/supabase/seeds/: 001_seed_demo.sql  002_full_seed.sql  003_auth_users.sql  004_manual_auth_users.sql
(+89 files in other folders)
