[project]
name = "sme_reporting"
version = "0.1.0"
description = "SME SaaS reporting service (FastAPI)"
authors = [{name="SME"}]
requires-python = ">=3.11"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.30.0",
  "httpx==0.27.0",
  "pydantic==2.7.1",
  "jinja2==3.1.4",
  "python-multipart==0.0.9",
  "reportlab==4.1.0",
  "openpyxl==3.1.2",
  "psycopg[binary,pool]==3.1.19"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
